# manga-one-rss

./: .gitignore  CLAUDE.md  feed.csv  main.py  pyproject.toml
.github/workflows/: gh-pages.yaml
templates/: index.html
tests/: test_build_feed_for_work.py  test_parse_chapter.py  test_protobuf.py  test_read_feed_ids.py
